--- a/Source/Mosa.Platform.x64/Mosa.Platform.x64.csproj
+++ b/Source/Mosa.Platform.x64/Mosa.Platform.x64.csproj
@@ -345,6 +345,8 @@
     <Compile Include="Stages\IRSubstitutionStage.cs" />
     <Compile Include="Stages\IRTransformationStage.cs" />
     <Compile Include="Stages\LongOperandStage.cs" />
+    <Compile Include="Stages\OptimizationStage.cs" />
+    <Compile Include="Stages\PostOptimizationStage.cs" />
     <Compile Include="Stages\SimpleDeadCodeRemovalStage.cs" />
     <Compile Include="Stages\TweakStage.cs" />
     <Compile Include="X64.cs" />
