--- a/Source/Mosa.Platform.ESP32/Mosa.Platform.ESP32.csproj
+++ b/Source/Mosa.Platform.ESP32/Mosa.Platform.ESP32.csproj
@@ -88,7 +88,27 @@
     <Compile Include="BaseTransformationStage.cs" />
     <Compile Include="GeneralPurposeRegister.cs" />
     <Compile Include="ESP32CodeEmitter.cs" />
+    <Compile Include="Instructions\Abs.cs" />
+    <Compile Include="Instructions\AbsS.cs" />
+    <Compile Include="Instructions\Add.cs" />
     <Compile Include="Instructions\Add32.cs" />
+    <Compile Include="Instructions\Addi.cs" />
+    <Compile Include="Instructions\Addmi.cs" />
+    <Compile Include="Instructions\AddS.cs" />
+    <Compile Include="Instructions\Addx2.cs" />
+    <Compile Include="Instructions\Addx4.cs" />
+    <Compile Include="Instructions\Addx8.cs" />
+    <Compile Include="Instructions\All4.cs" />
+    <Compile Include="Instructions\All8.cs" />
+    <Compile Include="Instructions\And.cs" />
+    <Compile Include="Instructions\Andb.cs" />
+    <Compile Include="Instructions\Andbc.cs" />
+    <Compile Include="Instructions\Any4.cs" />
+    <Compile Include="Instructions\Any8.cs" />
+    <Compile Include="Instructions\Ball.cs" />
+    <Compile Include="Instructions\Bany.cs" />
+    <Compile Include="Instructions\Bbc.cs" />
+    <Compile Include="Instructions\Bbci.cs" />
     <Compile Include="Instructions\Nop.cs" />
     <Compile Include="Intrinsic\Nop.cs" />
     <Compile Include="Stages\IRTransformationStage.cs" />
