- Move 32-bit division code to non-platform specific runtime

--- a/Source/Mosa.Runtime/Mosa.Runtime.csproj
+++ b/Source/Mosa.Runtime/Mosa.Runtime.csproj
@@ -67,6 +67,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Division.cs" />
     <Compile Include="Metadata\ExceptionHandlerType.cs" />
     <Compile Include="IntPtrExtension.cs" />
     <Compile Include="Metadata\CustomAttribute.cs" />
