--- a/Source/Mosa.Tool.Explorer/Mosa.Tool.Explorer.csproj
+++ b/Source/Mosa.Tool.Explorer/Mosa.Tool.Explorer.csproj
@@ -118,6 +118,10 @@
       <Project>{0fb92651-3ee8-441d-84f2-c4dfda68e8a5}</Project>
       <Name>Mosa.Platform.ARMv6</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mosa.Platform.ESP32\Mosa.Platform.ESP32.csproj">
+      <Project>{5b45af28-3b67-4542-a0c9-947f3cdd9741}</Project>
+      <Name>Mosa.Platform.ESP32</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Mosa.Platform.x64\Mosa.Platform.x64.csproj">
       <Project>{f445db8e-e25a-41ef-a158-c742f14e94e4}</Project>
       <Name>Mosa.Platform.x64</Name>
