026 Migrate Compiler to .NET Standard 2.0 and dnlib to 3.1.0

--- a/Source/Mosa.Compiler.MosaTypeSystem/Mosa.Compiler.MosaTypeSystem.csproj
+++ b/Source/Mosa.Compiler.MosaTypeSystem/Mosa.Compiler.MosaTypeSystem.csproj
@@ -6,9 +6,9 @@
       <Compile Remove="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="dnlib-new" Version="2.1.0" />
+      <ProjectReference Include="..\Mosa.Compiler.Common\Mosa.Compiler.Common.csproj" />
     </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\Mosa.Compiler.Common\Mosa.Compiler.Common.csproj" />
+      <PackageReference Include="dnlib" Version="3.1.0" />
     </ItemGroup>
 </Project>
