--- a/Source/Mosa.Compiler.MosaTypeSystem/Mosa.Compiler.MosaTypeSystem.csproj
+++ b/Source/Mosa.Compiler.MosaTypeSystem/Mosa.Compiler.MosaTypeSystem.csproj
@@ -1,127 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
-  <PropertyGroup>
-    <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5F30A68E-05BF-40EA-B576-5EBCDE520559}</ProjectGuid>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <AssemblyKeyContainerName>
-    </AssemblyKeyContainerName>
-    <AssemblyName>Mosa.Compiler.MosaTypeSystem</AssemblyName>
-    <DefaultClientScript>JScript</DefaultClientScript>
-    <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
-    <DefaultTargetSchema>IE50</DefaultTargetSchema>
-    <DelaySign>false</DelaySign>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <OutputType>Library</OutputType>
-    <RootNamespace>Mosa.Compiler.MosaTypeSystem</RootNamespace>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <OldToolsVersion>3.5</OldToolsVersion>
-    <UpgradeBackupLocation />
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <BaseAddress>285212672</BaseAddress>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>
-    </DocumentationFile>
-    <DebugSymbols>true</DebugSymbols>
-    <FileAlignment>4096</FileAlignment>
-    <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\</OutputPath>
-    <RegisterForComInterop>False</RegisterForComInterop>
-    <RemoveIntegerChecks>False</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningLevel>4</WarningLevel>
-    <DebugType>full</DebugType>
-    <NoWarn>0414,1685</NoWarn>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugSymbols>True</DebugSymbols>
-    <DebugType>full</DebugType>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <BaseAddress>285212672</BaseAddress>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>..\..\bin\Mosa.Compiler.MosaTypeSystem.xml</DocumentationFile>
-    <FileAlignment>4096</FileAlignment>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\</OutputPath>
-    <RegisterForComInterop>False</RegisterForComInterop>
-    <RemoveIntegerChecks>False</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningLevel>2</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <NoWarn>0414,1685</NoWarn>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="dnlib, Version=2.1.0.0, Culture=neutral, PublicKeyToken=50e96378b6e77999, processorArchitecture=MSIL">
-      <HintPath>..\packages\dnlib-new.2.1.0\lib\dnlib.dll</HintPath>
-      <Private>True</Private>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Mosa.Compiler.Common\Mosa.Compiler.Common.csproj">
-      <Project>{0b1011a6-8fcd-4f9e-bbb8-8db86e23d2e8}</Project>
-      <Name>Mosa.Compiler.Common</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="BuiltInType.cs" />
-    <Compile Include="Metadata\GenericArgumentResolver.cs" />
-    <Compile Include="IMetadata.cs" />
-    <Compile Include="Metadata\MetadataResolver.cs" />
-    <Compile Include="ITypeSystemController.cs" />
-    <Compile Include="Metadata\DnlibExtension.cs" />
-    <Compile Include="ExceptionHandlerType.cs" />
-    <Compile Include="Metadata\CLRMetadata.cs" />
-    <Compile Include="Metadata\UnitDescs.cs" />
-    <Compile Include="MosaFieldAttributes.cs" />
-    <Compile Include="MosaMethodAttributes.cs" />
-    <Compile Include="MosaParameterAttributes.cs" />
-    <Compile Include="MosaPropertyAttributes.cs" />
-    <Compile Include="MosaTypeExtension.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SignatureName.cs" />
-    <Compile Include="MosaTypeAttributes.cs" />
-    <Compile Include="Units\MosaArrayInfo.cs" />
-    <Compile Include="Units\MosaCustomAttribute.cs" />
-    <Compile Include="Units\MosaInstruction.cs" />
-    <Compile Include="Units\MosaLocal.cs" />
-    <Compile Include="Units\MosaMethodSignature.cs" />
-    <Compile Include="MosaTypeCode.cs" />
-    <Compile Include="Units\MosaExceptionHandler.cs" />
-    <Compile Include="MosaModuleLoader.cs" />
-    <Compile Include="Units\MosaModule.cs" />
-    <Compile Include="BuiltInTypes.cs" />
-    <Compile Include="Metadata\MetadataLoader.cs" />
-    <Compile Include="Metadata\MetadataCache.cs" />
-    <Compile Include="Units\MosaProperty.cs" />
-    <Compile Include="Units\MosaUnit.cs" />
-    <Compile Include="Metadata\ScopedToken.cs" />
-    <Compile Include="SignatureComparer.cs" />
-    <Compile Include="StackTypeCode.cs" />
-    <Compile Include="TypeSystem.cs" />
-    <Compile Include="Units\MosaMethod.cs" />
-    <Compile Include="Units\MosaField.cs" />
-    <Compile Include="Units\MosaParameter.cs" />
-    <Compile Include="Units\MosaType.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+    </PropertyGroup>
+    <ItemGroup>
+      <Compile Remove="Properties\AssemblyInfo.cs" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Mosa.Compiler.Common\Mosa.Compiler.Common.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="dnlib" Version="3.1.0" />
+    </ItemGroup>
 </Project>
