--- a/Source/Mosa.Compiler.Extension.Dwarf/Mosa.Compiler.Extension.Dwarf.csproj
+++ b/Source/Mosa.Compiler.Extension.Dwarf/Mosa.Compiler.Extension.Dwarf.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>Mosa.Compiler.Extensions.Dwarf</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
