--- a/Source/.vscode/launch.json
+++ b/Source/.vscode/launch.json
@@ -1,19 +1,33 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Tool.Compiler",
-            "type": "mono",
-            "request": "launch",
-            "program": "${workspaceRoot}/../bin/Mosa.Tool.Compiler.exe",
-            "args": ["-o", "Mosa.HelloWorld.x86.bin", "-a", "x86", "--mboot", "v1", "--x86-irq-methods", "--base-address", "0x00500000", "mscorlib.dll", "Mosa.Plug.Korlib.dll", "Mosa.Plug.Korlib.x86.dll", "Mosa.HelloWorld.x86.exe"],
-            "cwd": "${workspaceRoot}/../bin"
-        }
-
-        /*
+	// Use IntelliSense to learn about possible attributes.
+	// Hover to view descriptions of existing attributes.
+	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+	"version": "0.2.0",
+	"configurations": [
+		{
+			"name": "Tool.Compiler",
+			"type": "mono",
+			"request": "launch",
+			"program": "${workspaceRoot}/../bin/Mosa.Tool.Compiler.exe",
+			"args": [
+				"-o",
+				"Mosa.HelloWorld.x86.bin",
+				"-a",
+				"x86",
+				"--mboot",
+				"v1",
+				"--x86-irq-methods",
+				"--base-address",
+				"0x00500000",
+				"mscorlib.dll",
+				"Mosa.Plug.Korlib.dll",
+				"Mosa.Plug.Korlib.x86.dll",
+				"Mosa.HelloWorld.x86.exe"
+			],
+			"cwd": "${workspaceRoot}/../bin",
+			"internalConsoleOptions": "openOnSessionStart"
+		}
+		/*
         {
             "name": "Attach",
             "type": "mono",
@@ -22,5 +36,5 @@
             "port": 55555
         }
         */
-    ]
+	]
 }
