--- a/Source/Mosa.Tool.Mosactl/Mosa.Tool.Mosactl.csproj
+++ b/Source/Mosa.Tool.Mosactl/Mosa.Tool.Mosactl.csproj
@@ -65,6 +65,7 @@
     <StartupObject>Mosa.Tool.Mosactl.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AppLocations.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs">
       <SubType>Code</SubType>
@@ -72,15 +73,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Application.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Help\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Help\usage.txt">
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.md" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
