clean up packages Part 1

--- a/Source/Mosa.Utility.GUI.Common/Mosa.Utility.GUI.Common.csproj
+++ b/Source/Mosa.Utility.GUI.Common/Mosa.Utility.GUI.Common.csproj
@@ -41,9 +41,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="dnlib">
-      <HintPath>..\packages\dnlib.3.1.0\lib\net461\dnlib.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -66,7 +63,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <PackageReference Include="dnlib">
+      <Version>3.1.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
